# opengl

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old
apps/: 3.3.shader.fs  3.3.shader.vs  CMakeLists.txt  cameraDemo.cpp  drawTriangles.cpp  drawTrianglesShader.cpp  maxVertexAttribs.cpp  projectionDemo.cpp  projectionShader.vs  textureShader.fs  textureShader.vs  texturesDemo.cpp  transformDemo.cpp  transformShader.fs  transformShader.vs
cmake/modules/: FindGLAD.cmake
includes/: Camera.h  Shader.h
includes/glad/: glad.h
src/: glad.c
tests/: CMakeLists.txt  testHelloTriangle.cpp  testHelloWindow.cpp  testHelloWorld.cpp  testIncludeLibraries.cpp
